--- a/packages/catalog-model/examples/components/petstore-component.yaml
+++ b/packages/catalog-model/examples/components/petstore-component.yaml
@@ -1,12 +1,13 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: petstore
+  name: Petstore
   # This is an extra long description with Markdown
   description: |
     [The Petstore](http://petstore.example.com) is an example API used to show features of the OpenAPI spec.
     - First item
     - Second item
+    - Three item(rpedroso)
   links:
     - url: https://github.com/swagger-api/swagger-petstore
       title: GitHub Repo
@@ -14,7 +15,7 @@ metadata:
 spec:
   type: service
   lifecycle: experimental
-  owner: team-c
+  owner: team-pedroso
   providesApis:
     - petstore
     - streetlights
